tests/ui/invalid_pymethods_duplicates.stderr
error[E0119]: conflicting implementations of trait `PyClassNewTextSignature` for type `TwoNew`
 --> tests/ui/invalid_pymethods_duplicates.rs:9:1
  |
9 | #[pymethods]
  | ^^^^^^^^^^^^
  | |
  | first implementation here
  | conflicting implementation for `TwoNew`
  |
  = note: this error originates in the attribute macro `pymethods` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0592]: duplicate definitions with name `__pymethod___new____`
 --> tests/ui/invalid_pymethods_duplicates.rs:9:1
  |
9 | #[pymethods]
  | ^^^^^^^^^^^^
  | |
  | duplicate definitions for `__pymethod___new____`
  | other definition for `__pymethod___new____`
  |
  = note: this error originates in the attribute macro `pymethods` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0592]: duplicate definitions with name `__pymethod_func__`
  --> tests/ui/invalid_pymethods_duplicates.rs:25:1
   |
25 | #[pymethods]
   | ^^^^^^^^^^^^
   | |
   | duplicate definitions for `__pymethod_func__`
   | other definition for `__pymethod_func__`
   |
   = note: this error originates in the attribute macro `pymethods` (in Nightly builds, run with -Z macro-backtrace for more info)
